[package]
name = "rackcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
openssl = "0.10"
directories = "5.0.1"
futures = "0.3.30"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
snmp2 = { version = "0.4.8", features = ["v3"] }
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.8"
