[package]
name = "rackcli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
openssl = "0.10"
directories = "6.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
snmp2 = { version = "0.5.0", features = ["v3"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native"] }
